--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "YT_COOKIE": "SIDCC=AJi4QfES2ugafRaJKXHv5wGR7ExAcpZp9H0SA_Kti58J_6_DlTUEo9u9afX6bIENCSIuI8IpNf0; expires=Thu, 13-Jul-2023 08:16:34 GMT; path=/; domain=.youtube.com; priority=high",
-    "BOT_TOKEN": "OTUyNDg3NjA1MTcyMzEwMDIw.GN_wZQ._fw6ffTz_3luqZMqS06LfQUbvqp8LuDMGYgtOU",
+    "BOT_TOKEN": "うんこ",
     "tenorAPI":"EYBBPR6S6AKM",
     "DEFAULT_PREFIX":"!",
     "ERROR_LOGS_CHANNEL": "978267855151845387",
