--- a/config.json
+++ b/config.json
@@ -1,29 +1,27 @@
 {
     "YT_COOKIE": "SIDCC=AJi4QfES2ugafRaJKXHv5wGR7ExAcpZp9H0SA_Kti58J_6_DlTUEo9u9afX6bIENCSIuI8IpNf0; expires=Thu, 13-Jul-2023 08:16:34 GMT; path=/; domain=.youtube.com; priority=high",
-    "BOT_TOKEN": "うんこ",
-    "tenorAPI":"EYBBPR6S6AKM",
+    "BOT_TOKEN": "BOTのTOKEN",
+    "tenorAPI":"0000",
     "DEFAULT_PREFIX":"!",
-    "ERROR_LOGS_CHANNEL": "978267855151845387",
-    "mongoPass": "mongodb+srv://kuronekobot:kuronekobot@cluster0.o2s96.mongodb.net/?retryWrites=true&w=majority",
+    "ERROR_LOGS_CHANNEL": "チャンネルID",
+    "mongoPass": "mongodbのURL",
     "bot": {
-        "token": "OTUyNDg3NjA1MTcyMzEwMDIw.GN_wZQ._fw6ffTz_3luqZMqS06LfQUbvqp8LuDMGYgtOU",
+        "token": "BOTのTOKEN",
         "prefix": "!",
         "_comment": "ownerに指定したユーザーは、各種管理botコマンドが実行可能となります(例: eval,reload)",
         "owner": [
-            "927919368665456710", 
-            "608788412367110149",
-            "731503872098697226",
+            "608788412367110149", 
             "586157827400400907"
         ]
     },
     "mongodb":  {
-        "url": "mongodb+srv://kuronekobot:kuronekobot@cluster0.o2s96.mongodb.net/?retryWrites=true&w=majority"
+        "url": "mongodbのURL"
     },
     "debug": {
         "_comment": "debugモードを有効にするとコマンド実行失敗時にエラーメッセージを一部表示(ログにはつねに表示)するなど、開発中に便利機能を有効化します",
         "enable": "true"
     },
-    "syslog": "986566525244825602",
+    "syslog": "チャンネルID",
     "command_settings": {
         "_comment": "この設定項目では一部コマンドの有効化,無効化を設定することができます。",
         "_comment_2": "trueで有効,falseで無効化します(既定値: true)",
